[gd_scene load_steps=10 format=3 uid="uid://cobluhhp2g1xf"]

[ext_resource type="Theme" uid="uid://c2iwmviw26odh" path="res://Gui/Cancel.tres" id="1_8v7ut"]
[ext_resource type="Script" path="res://Scene/MainScene/singupScene.gd" id="2_k1ers"]
[ext_resource type="Texture2D" uid="uid://r7pnsoxd8d0w" path="res://Graphics/Ui/PNG/grey_panel.png" id="2_nbdfm"]
[ext_resource type="Texture2D" uid="uid://66klc6e88cg8" path="res://Graphics/Ui/PNG/44da78b4a24e3278998a9f8c810600d4.jpg" id="3_v2gxc"]
[ext_resource type="Texture2D" uid="uid://byks4ltbcpt3d" path="res://Graphics/Ui/PNG/grey_button01.png" id="3_wp4i2"]
[ext_resource type="Texture2D" uid="uid://dnfyeqm6nk804" path="res://Graphics/Ui/PNG/blue_button13.png" id="4_43d5r"]
[ext_resource type="Texture2D" uid="uid://ds25ckj776gkw" path="res://Graphics/Ui/PNG/green_button13.png" id="5_o8lfi"]
[ext_resource type="Texture2D" uid="uid://q5nw3u248tyl" path="res://Graphics/Ui/PNG/blue_button01.png" id="6_7nsie"]
[ext_resource type="Texture2D" uid="uid://dkyiag51b6jpx" path="res://Graphics/Ui/PNG/blue_button06.png" id="7_1m4ol"]

[node name="SingupScene" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -90.0
offset_right = 696.0
offset_bottom = 512.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.374177, 0.299604)
size_flags_horizontal = 0
theme = ExtResource("1_8v7ut")
script = ExtResource("2_k1ers")
metadata/_edit_vertical_guides_ = [-239.0]

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 855.0
offset_bottom = 601.0
texture = ExtResource("3_v2gxc")

[node name="NinePatchRect" type="NinePatchRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -222.5
offset_right = 179.0
offset_bottom = 222.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_8v7ut")
texture = ExtResource("2_nbdfm")

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -189.0
offset_right = 114.0
offset_bottom = 189.0
grow_horizontal = 2
grow_vertical = 2

[node name="Tiitle" type="Label" parent="TextureRect/NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(50, 20)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_8v7ut")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Bibliomania

"

[node name="UsernameTitle2" type="Label" parent="TextureRect/NinePatchRect/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme = ExtResource("1_8v7ut")
text = "Username
"

[node name="LineEdit" type="LineEdit" parent="TextureRect/NinePatchRect/VBoxContainer"]
modulate = Color(0, 0, 0, 0.392157)
layout_mode = 2
theme = ExtResource("1_8v7ut")

[node name="Email" type="Label" parent="TextureRect/NinePatchRect/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "Email adress
"

[node name="LineEdit2" type="LineEdit" parent="TextureRect/NinePatchRect/VBoxContainer"]
modulate = Color(0, 0, 0, 0.392157)
layout_mode = 2
theme = ExtResource("1_8v7ut")

[node name="PasswordTitle" type="Label" parent="TextureRect/NinePatchRect/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "Password
"

[node name="LineEdit3" type="LineEdit" parent="TextureRect/NinePatchRect/VBoxContainer"]
modulate = Color(0, 0, 0, 0.392157)
layout_mode = 2
theme = ExtResource("1_8v7ut")

[node name="Message" type="Label" parent="TextureRect/NinePatchRect/VBoxContainer"]
modulate = Color(0.929412, 0, 0, 1)
layout_mode = 2
theme = ExtResource("1_8v7ut")
text = "username
"

[node name="CreateButton" type="TextureButton" parent="TextureRect/NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_8v7ut")
texture_normal = ExtResource("4_43d5r")
texture_pressed = ExtResource("6_7nsie")
texture_hover = ExtResource("7_1m4ol")
texture_disabled = ExtResource("6_7nsie")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="TextureRect/NinePatchRect/VBoxContainer/CreateButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = -11.5
offset_right = 30.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Create account"

[node name="LoginButton" type="TextureButton" parent="TextureRect/NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_8v7ut")
texture_normal = ExtResource("3_wp4i2")
texture_pressed = ExtResource("3_wp4i2")
texture_hover = ExtResource("5_o8lfi")
texture_disabled = ExtResource("3_wp4i2")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="TextureRect/NinePatchRect/VBoxContainer/LoginButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = -11.5
offset_right = 30.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Log in"

[connection signal="text_submitted" from="TextureRect/NinePatchRect/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="button_down" from="TextureRect/NinePatchRect/VBoxContainer/CreateButton" to="." method="_on_create_button_button_down"]
[connection signal="button_down" from="TextureRect/NinePatchRect/VBoxContainer/LoginButton" to="." method="_on_login_button_button_down"]
